Modelo de una serie temporal no estacionaria

--- a/src/time series no estacionaria.ipynb
+++ b/src/time series no estacionaria.ipynb
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "e6edd0d7",
    "metadata": {},
    "outputs": [
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "02ec6de6",
    "metadata": {},
    "outputs": [
@@ -610,35 +610,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "25d03b91",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Resultados de la prueba de Dickey-Fuller:\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Test Statistic                -9.430263e+00\n",
-       "p-value                        5.212954e-16\n",
-       "#Lags Used                     1.200000e+01\n",
-       "Number of Observations Used    3.520000e+02\n",
-       "Critical Value (1%)           -3.449065e+00\n",
-       "Critical Value (5%)           -2.869786e+00\n",
-       "Critical Value (10%)          -2.571163e+00\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# total_data_stationary = total_data.diff().dropna()\n",
     "\n",
@@ -647,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "69653918",
    "metadata": {},
    "outputs": [
@@ -664,20 +639,20 @@
      "output_type": "stream",
      "text": [
       "Performing stepwise search to minimize aic\n",
-      " ARIMA(2,1,2)(0,0,0)[0] intercept   : AIC=1843.274, Time=0.77 sec\n",
+      " ARIMA(2,1,2)(0,0,0)[0] intercept   : AIC=1843.274, Time=0.65 sec\n",
       " ARIMA(0,1,0)(0,0,0)[0] intercept   : AIC=2096.542, Time=0.03 sec\n",
       " ARIMA(1,1,0)(0,0,0)[0] intercept   : AIC=1970.972, Time=0.05 sec\n",
       " ARIMA(0,1,1)(0,0,0)[0] intercept   : AIC=1839.586, Time=0.18 sec\n",
       " ARIMA(0,1,0)(0,0,0)[0]             : AIC=2209.657, Time=0.03 sec\n",
       " ARIMA(1,1,1)(0,0,0)[0] intercept   : AIC=1839.552, Time=0.31 sec\n",
-      " ARIMA(2,1,1)(0,0,0)[0] intercept   : AIC=1841.532, Time=0.45 sec\n",
-      " ARIMA(1,1,2)(0,0,0)[0] intercept   : AIC=1843.586, Time=0.24 sec\n",
-      " ARIMA(0,1,2)(0,0,0)[0] intercept   : AIC=1839.607, Time=0.21 sec\n",
+      " ARIMA(2,1,1)(0,0,0)[0] intercept   : AIC=1841.532, Time=0.42 sec\n",
+      " ARIMA(1,1,2)(0,0,0)[0] intercept   : AIC=1843.586, Time=0.19 sec\n",
+      " ARIMA(0,1,2)(0,0,0)[0] intercept   : AIC=1839.607, Time=0.23 sec\n",
       " ARIMA(2,1,0)(0,0,0)[0] intercept   : AIC=1922.648, Time=0.08 sec\n",
-      " ARIMA(1,1,1)(0,0,0)[0]             : AIC=inf, Time=0.30 sec\n",
+      " ARIMA(1,1,1)(0,0,0)[0]             : AIC=inf, Time=0.23 sec\n",
       "\n",
       "Best model:  ARIMA(1,1,1)(0,0,0)[0] intercept\n",
-      "Total fit time: 2.761 seconds\n"
+      "Total fit time: 2.431 seconds\n"
      ]
     }
    ],
@@ -689,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "44860b4c",
    "metadata": {},
    "outputs": [
@@ -708,7 +683,7 @@
        "  <th>Date:</th>            <td>Fri, 29 Dec 2023</td> <th>  AIC                </th> <td>1839.552</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                <td>16:55:54</td>     <th>  BIC                </th> <td>1855.152</td>\n",
+       "  <th>Time:</th>                <td>18:00:43</td>     <th>  BIC                </th> <td>1855.152</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Sample:</th>             <td>09-03-2022</td>    <th>  HQIC               </th> <td>1845.752</td>\n",
@@ -760,7 +735,7 @@
        "Dep. Variable:                      y   No. Observations:                  366\n",
        "Model:               SARIMAX(1, 1, 1)   Log Likelihood                -915.776\n",
        "Date:                Fri, 29 Dec 2023   AIC                           1839.552\n",
-       "Time:                        16:55:54   BIC                           1855.152\n",
+       "Time:                        18:00:43   BIC                           1855.152\n",
        "Sample:                    09-03-2022   HQIC                          1845.752\n",
        "                         - 09-03-2023                                         \n",
        "Covariance Type:                  opg                                         \n",
@@ -783,7 +758,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "e47ba430",
    "metadata": {},
    "outputs": [
@@ -834,7 +809,7 @@
        "Freq: D, dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "08b25aea",
    "metadata": {},
    "outputs": [
@@ -1033,7 +1008,7 @@
        "2023-10-03  1077.565122"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "73ee3e37",
    "metadata": {},
    "outputs": [],
@@ -1055,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "b87c8b27",
    "metadata": {},
    "outputs": [
@@ -1088,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "3ef9700f",
    "metadata": {},
    "outputs": [],
@@ -1098,28 +1073,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "f3884e86",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dump(model, open(r\"C:\\Users\\user\\4Geeks\\Módulos\\Módulo22\\time_series_model.pkl\", \"wb\"))"
+    "dump(model, open(r\"C:\\Users\\user\\4Geeks\\Módulos\\Módulo22\\time-series\\models\\time_series_model.pkl\", \"wb\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "id": "3601f99b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Cloning into 'time-series'...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# !git clone https://github.com/orj93/time-series.git"
    ]
@@ -1131,12 +1098,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd time-series"
+    "# !cd time-series"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "id": "320bbb29",
    "metadata": {},
    "outputs": [
@@ -1144,7 +1111,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "warning: in the working copy of 'src/time series no estacionaria.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+      "warning: in the working copy of 'src/time series no estacionaria.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'src/.ipynb_checkpoints/time series no estacionaria-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     }
    ],
@@ -1154,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "id": "d540617e",
    "metadata": {},
    "outputs": [
@@ -1162,9 +1130,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 45a716e] Modelo de serie temporal no estacionaria\n",
-      " 1 file changed, 1221 insertions(+)\n",
-      " create mode 100644 src/time series no estacionaria.ipynb\n"
+      "[main 9c84548] Modelo de serie temporal no estacionaria\n",
+      " 2 files changed, 1311 insertions(+), 30 deletions(-)\n",
+      " create mode 100644 src/.ipynb_checkpoints/time series no estacionaria-checkpoint.ipynb\n"
      ]
     }
    ],
@@ -1174,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "id": "8661330e",
    "metadata": {},
    "outputs": [
@@ -1183,7 +1151,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/orj93/time-series.git\n",
-      "   0f2537a..45a716e  main -> main\n"
+      "   45a716e..9c84548  main -> main\n"
      ]
     }
    ],
@@ -1193,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "id": "375e884e",
    "metadata": {},
    "outputs": [
@@ -1221,7 +1189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f9e9dc3",
+   "id": "fc957bc3",
    "metadata": {},
    "outputs": [],
    "source": []
