Modelo de serie temporal no estacionaria

--- a/src/time series no estacionaria.ipynb
+++ b/src/time series no estacionaria.ipynb
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "id": "320bbb29",
    "metadata": {},
    "outputs": [
@@ -1111,8 +1111,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "warning: in the working copy of 'src/time series no estacionaria.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'src/.ipynb_checkpoints/time series no estacionaria-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+      "warning: in the working copy of 'src/time series no estacionaria.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     }
    ],
@@ -1122,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "id": "d540617e",
    "metadata": {},
    "outputs": [
@@ -1130,19 +1129,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 9c84548] Modelo de serie temporal no estacionaria\n",
-      " 2 files changed, 1311 insertions(+), 30 deletions(-)\n",
-      " create mode 100644 src/.ipynb_checkpoints/time series no estacionaria-checkpoint.ipynb\n"
+      "[main d493045] Modelo de una serie temporal no estacionaria\n",
+      " 1 file changed, 38 insertions(+), 70 deletions(-)\n"
      ]
     }
    ],
    "source": [
-    "!git commit -m \"Modelo de serie temporal no estacionaria\""
+    "!git commit -m \"Modelo de una serie temporal no estacionaria\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "id": "8661330e",
    "metadata": {},
    "outputs": [
@@ -1151,17 +1149,17 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/orj93/time-series.git\n",
-      "   45a716e..9c84548  main -> main\n"
+      "   9c84548..d493045  main -> main\n"
      ]
     }
    ],
    "source": [
-    "!git push"
+    "!git push origin main"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "id": "375e884e",
    "metadata": {},
    "outputs": [
@@ -1189,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc957bc3",
+   "id": "0dcbd85a",
    "metadata": {},
    "outputs": [],
    "source": []
