--- a/src/time series no estacionaria.ipynb
+++ b/src/time series no estacionaria.ipynb
@@ -1093,35 +1093,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 49,
    "id": "7b839df3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !cd time-series"
+    "!git add C:\\Users\\user\\4Geeks\\Módulos\\Módulo22\\time-series\\data\\raw\\raw_data_time_series.csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
+   "id": "55c35789",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git add C:\\Users\\user\\4Geeks\\Módulos\\Módulo22\\time-series\\data\\processed\\sel_data_time_series.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "id": "320bbb29",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "warning: in the working copy of 'src/time series no estacionaria.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!git add ."
+    "!git add C:\\Users\\user\\4Geeks\\Módulos\\Módulo22\\time-series\\models\\time_series_model.pkl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 52,
    "id": "d540617e",
    "metadata": {},
    "outputs": [
@@ -1129,18 +1131,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main d493045] Modelo de una serie temporal no estacionaria\n",
-      " 1 file changed, 38 insertions(+), 70 deletions(-)\n"
+      "[main 2c9740b] Modelo de serie temporal no estacionaria\n",
+      " 1 file changed, 367 insertions(+)\n",
+      " create mode 100644 data/processed/sel_data_time_series.csv\n"
      ]
     }
    ],
    "source": [
-    "!git commit -m \"Modelo de una serie temporal no estacionaria\""
+    "!git commit -m \"Modelo de serie temporal no estacionaria\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 53,
    "id": "8661330e",
    "metadata": {},
    "outputs": [
@@ -1149,7 +1152,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/orj93/time-series.git\n",
-      "   9c84548..d493045  main -> main\n"
+      "   e945768..2c9740b  main -> main\n"
      ]
     }
    ],
@@ -1159,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "id": "375e884e",
    "metadata": {},
    "outputs": [
@@ -1170,13 +1173,78 @@
       "On branch main\n",
       "Your branch is up to date with 'origin/main'.\n",
       "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
+      "\tmodified:   time series no estacionaria.ipynb\n",
+      "\n",
       "Untracked files:\n",
       "  (use \"git add <file>...\" to include in what will be committed)\n",
       "\t../data/processed/sel_data_time_series.csv\n",
       "\t../data/raw/raw_data_time_series.csv\n",
       "\t../models/time_series_model.pkl\n",
       "\n",
-      "nothing added to commit but untracked files present (use \"git add\" to track)\n"
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "0e16ca16",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "M\tsrc/time series no estacionaria.ipynb\n",
+      "Your branch is up to date with 'origin/main'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Already on 'main'\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git checkout main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "b88d9e2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch main\n",
+      "Your branch is up to date with 'origin/main'.\n",
+      "\n",
+      "Changes to be committed:\n",
+      "  (use \"git restore --staged <file>...\" to unstage)\n",
+      "\tnew file:   ../data/raw/raw_data_time_series.csv\n",
+      "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
+      "\tmodified:   time series no estacionaria.ipynb\n",
+      "\n",
+      "Untracked files:\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\n",
+      "\t../data/processed/sel_data_time_series.csv\n",
+      "\t../models/time_series_model.pkl\n",
+      "\n"
      ]
     }
    ],
@@ -1187,7 +1255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dcbd85a",
+   "id": "ce6fef7b",
    "metadata": {},
    "outputs": [],
    "source": []
